# tickets_services

./: LICENSE  README.md  drawSQL-pgsql-export-2024-09-29.sql  main.py  pyproject.toml
src/database/: db.py  models.py
