[tool.poetry]
name = "tickets-services"
version = "0.1.0"
description = ""
authors = ["AndreyKozachok <kozachok_andrey@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
